<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/app_bar_dash_board"
        layout="@layout/app_bar_dash_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">


        <!-- Custom Side Navigation Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/custom_side_nav"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/white"
            android:orientation="vertical">

            <!-- Header -->
            <include
                android:id="@+id/headerlayout"
                layout="@layout/nav_header_dash_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:layout_constraintTop_toTopOf="parent" />


            <!-- Drawer Items -->
            <LinearLayout
                android:id="@+id/nav_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/headerlayout">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/usericon"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/menu_profile"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/nav_profile">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/menu_wallet"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_addaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/nav_wallet">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/banking" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/menu_account"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/navRecyclerViewlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/nav_addaccount">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/reportsicon" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/navRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nav_addaccount" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/navRecyclerViewlayout">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/menu_sign"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/app_version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/darkpurple" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_dash_board"
            app:menu="@menu/activity_main_drawer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="16dp">

            <TextView
                android:id="@+id/app_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/darkpurple" />

        </LinearLayout>-->


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>